--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20230105214820" />
-  <title>Главная</title>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230105232113" />
+  <title>Sapper</title>
 </head>
 
   <body>
@@ -30,6 +30,6 @@
         <p class="mines">Количество мин: 0</p>
       </div>
     </div>
-    <script src="js/app.min.js?_v=20230105214820"></script>
+    <script src="js/app.min.js?_v=20230105232113"></script>
   </body>
 </html>
