--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include("html/head.html", { "title": "Главная" })
+  @@include("html/head.html", { "title": "Sapper" })
   <body>
     <div id="app">
       <form>
