--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
       <form>
         <fieldset>
           <legend>
-            <label for="columns">Введите количество столбцов (минимум 8)</label>
+            <label for="columns">Введите количество столбцов (от 8 до 16)</label>
           </legend>
           <input type="number" class="columns" id="columns" />
         </fieldset>
         <fieldset>
           <legend>
-            <label for="rows">Введите количество строк (минимум 8)</label>
+            <label for="rows">Введите количество строк (от 8 до 16)</label>
           </legend>
           <input type="number" class="rows" id="rows" />
         </fieldset>
