--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20230204214807" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20230205160431" />
   <title>Sapper</title>
 </head>
 
@@ -12,13 +12,13 @@
       <form>
         <fieldset>
           <legend>
-            <label for="columns">Введите количество столбцов (минимум 8)</label>
+            <label for="columns">Введите количество столбцов (от 8 до 16)</label>
           </legend>
           <input type="number" class="columns" id="columns" />
         </fieldset>
         <fieldset>
           <legend>
-            <label for="rows">Введите количество строк (минимум 8)</label>
+            <label for="rows">Введите количество строк (от 8 до 16)</label>
           </legend>
           <input type="number" class="rows" id="rows" />
         </fieldset>
@@ -30,6 +30,6 @@
         <p class="mines">Количество мин: 0</p>
       </div>
     </div>
-    <script src="js/app.min.js?_v=20230204214807"></script>
+    <script src="js/app.min.js?_v=20230205160431"></script>
   </body>
 </html>
